--- a/docs/yellowpaper/sections/01-introduction/index.tex
+++ b/docs/yellowpaper/sections/01-introduction/index.tex
@@ -45,19 +45,16 @@ Specifically, the HOPR protocol aims to build a network with the following featu
 \begin{itemize}
 
     \item \textbf{Sender-receiver unlinkability}
-          An adversary should be unable to distinguish whether $\{S_1\rightarrow R_1, S_2\rightarrow R_2\}$ or $\{S_1\rightarrow R_2, S_2\rightarrow R_1\}$ for any concurrently online honest senders $S_1$, $S_2$ and honest receivers $R_1$, $R_2$ of the adversary’s choice.
+          An adversary should be unable to distinguish which sender $\{S_1\}$ or $\{S_2\}$  is communicating with the user $\{R\}$ for any honest senders $S_1$, $S_2$ and honest receivers $R_1$, $R_2$ of the adversary’s choice. 
+           $$\{S_1\rightarrow R_1, S_2\rightarrow R_2\}$ or $\{S_1\rightarrow R_2, S_2\rightarrow R_1\}$$
     \item \textbf{Sender online unobservability}
-          An adversary should be unable to determine whether or not a specific sender $S$ is communicating with any receiver $R$, for any concurrently online honest sender $S$ of the adversary’s choice.
-          \begin{center}
-              Sender online unobservability $\rightarrow$ sender anonymity
-          \end{center}
-          $\{S_1 \rightarrow R,S_2 /\rightarrow \;or\; S_1 /\rightarrow,S_2 \rightarrow R\}$ for any concurrently online honest senders $S_1$ and $S_2$ and any receiver of the adversary’s choice.
+          An adversary should be unable to determine whether a specific sender $S$ is actually communicating with any receiver $R$ or not, for any honest sender $S$ of the adversary’s choice as follows:
+    
+          $$\{S_1 \rightarrow R,S_2 /\rightarrow \;or\; S_1 /\rightarrow,S_2 \rightarrow R\}$$ 
 
 
     \item \textbf{Resistance to active attacks}
-          An adversary must not be able to conduct active attacks such as tagging and replay attacks, where the adversary modifies and re-injects messages to extract information about their destinations or
-          content.
-
+          An adversary must not be able to modify or insert messages without authaurisation and thus extract information about their destinations.
 \end{itemize}
 To provide these features, the HOPR protocol builds on top of the Sphinx packet format \cite{sphinxpaper}, the specifics of which are explained in the \nameref{sec:sphinx} section.
 
@@ -66,8 +63,8 @@ To provide these features, the HOPR protocol builds on top of the Sphinx packet 
 
 Although we assume that nodes in the HOPR network can communicate reliably, the network must still be protected from malicious actors and node failures. We assume a threat model with byzantine nodes with the ability to either observe all network traffic and launch network attacks or to inject, drop, or delay messages as follows:
 
-\paragraph{A global passive adversary (GPA)} is able to observe all network traffic between users and providers and between mix servers. This adversary is able to observe the entire network infrastructure, launch network attacks such as BGP rerouting  or conduct indirect observations such as load monitoring and off-path attacks. Thus, the GPA is an abstraction that represents many different classes of adversaries able to observe some or all information between network nodes.
-\paragraph{Active adversary:}The adversary has the ability to observe all of the internal state of some corrupted or malicious mix relays. The adversary may inject, drop, or delay messages. She also has access to, and operates, using the secrets of those compromised parties. Furthermore, such corrupted nodes may deviate from the protocol, or inject malformed messages. A variation of this ability is where the mix relay is also the provider node meaning that the adversary additionally knows the mapping between clients and their mailboxes. We say that the provider is corrupt, but is restricted to being honest but curious.
+\paragraph{A global passive adversary (GPA)} is able to observe or eavesdrop all communication between users in the network and conduct different types of traffic and time based attacks.
+\paragraph{Active adversary:}The adversary has control over some corrupted users and is able to inject, drop, or delay messages in the protocol.
 
 
 In particular, to provide reliable privacy and data transmission the HOPR network needs to be resistant to both Sybil and eclipse attacks:
