--- a/docs/yellowpaper/sections/03-sphinx-packet-format/index.tex
+++ b/docs/yellowpaper/sections/03-sphinx-packet-format/index.tex
@@ -32,7 +32,7 @@ The integrity of this routing information is checked before sending. At each hop
 
 \paragraph{Notation:}Let $\kappa=128$ be the security parameter. With non-negligible probability, an adversary must perform around $2^\kappa$ operations to break the security of Sphinx.
 
-Let $r$ be the maximum number of nodes that a Sphinx mix message will traverse before being delivered to its destination.
+We define $r$ to be the maximum number of nodes that a Sphinx packet will traverse before arriving to its destination.
 
 $G$ is a prime order cyclic group satisfying the decisional Diffie-Hellman assumption \cite{Boneh_1998}. We use the secp256k1 elliptic curve \cite{sec2}. The element $g$ is a generator of $G$ and $q$ is the (prime) order of $G$, with $q\approx2^{2*\kappa}$.
 
@@ -85,7 +85,7 @@ $v\leq r$ is the length of the path traversed by the packet, where $|Z| \leq (2(
 \begin{align}  
     \phi_i&=\{ \phi_{i-1}\|0_{2\kappa}\}\oplus \rho(h_{\rho}(\varphi_{i-1}))_{[ \,(2(r-i)+3)\kappa..(2r+3)\kappa-1\,]}
 \end{align}
-where $\phi_0=\epsilon$ is an empty string. $\phi_i$ is generated using the shared secret $\varphi_{i-1}$ and used to ensure the header packets remain constant in size. Upon receiving a packet, the processing node extracts the information destined for it from the route information and the per-hop payload. The extraction is performed by deobfuscating and left-shifting the field. Ordinarily, this would make the field shorter at each hop, allowing an attacker to deduce the route length. For this reason, the field is pre-padded before forwarding.
+where $\phi_0=\epsilon$ is an empty string. $\phi_i$ is generated using the shared secret $\varphi_{i-1}$ and used to ensure the header packets remain constant in size. Upon receiving a packet, the node extracts the routing information destined to it and decryptes one layer of the payload before sending to the next downstream node. The extraction is performed by deobfuscating and left-shifting the field. Ordinarily, this would make the field shorter at each hop, allowing an attacker to deduce the route length. For this reason, the field is pre-padded before forwarding.
     
 $\beta_i$ is computed as the concatenation of $Z$ and a sequence of padding. The concatenation is then XORed  with the output of a PRG seeded with shared key $\varphi_{v-1}$ of node $v-1$. The result is finally concatenated with $\phi$ to ensure the header packets remain constant in size.
     
